--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,9 @@ a {
 .custom-dropdown .dropdown-toggle::after {
   display: none !important;
 }
+
+.card-hover:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
+}
