--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,25 @@ a {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.5s ease, box-shadow 0.3s ease;
 }
+.card-hover2:hover {
+  background-color: "#f5e8ff" !important;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.5s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+.card-hover3::-webkit-scrollbar-track {
+  border: 0px solid transparent !important;
+  padding: 0 !important;
+  background-color: transparent !important;
+}
+
+.card-hover3::-webkit-scrollbar {
+  width: 0px !important;
+}
+
+.card-hover3::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: transparent !important;
+  border: 0px solid transparent !important;
+}
